--- a/microservicecloud/pom.xml
+++ b/microservicecloud/pom.xml
@@ -6,13 +6,16 @@
 
     <groupId>com.devinkin.springcloud</groupId>
     <artifactId>microservicecloud</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>miscroservicecloud-api</module>
+        <module>microservicecloud-api</module>
         <module>microservicecloud-provider-dept-8001</module>
+        <module>microservicecloud-consumer-dept-80</module>
+        <module>microservicecloud-eureka-7001</module>
+        <module>microservicecloud-eureka-7002</module>
+        <module>microservicecloud-eureka-7003</module>
     </modules>
-    <packaging>pom</packaging>
-
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -43,7 +46,7 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>5.0.4</version>
+                <version>8.0.14</version>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
